2008-03-13  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs,
	  MonoDevelop.SourceEditor/GotoLineNumberWidget.cs,
	  MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed Bug 370133 -
	  When jumping to a line, caret should be placed in the middle of the
	  window

2008-03-13  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs,
	  MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs,
	  MonoDevelop.SourceEditor/SearchWidget.cs: Fixed Bug 370139 - Search
	  entry shown in red backround even if there is a match.

2008-03-13  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Fixed Bug 363634 -
	  Quick class navigator does not work for abstract methods

2008-03-12  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: fixed warning.

2008-03-12  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: added emacs find
	  next/prev

2008-03-07  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/objects.xml,
	  MonoDevelop.SourceEditor.OptionPanels/BehaviorPanel.cs,
	  MonoDevelop.SourceEditor.OptionPanels/MarkerPanel.cs,
	  MonoDevelop.SourceEditor.OptionPanels/HighlightingPanel.cs,
	  MonoDevelop.SourceEditor.OptionPanels/GeneralOptionsPanel.cs,
	  MonoDevelop.SourceEditor.addin.xml: Use new options dialog
	  infrastructure.

2008-03-05  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs,
	  MonoDevelop.SourceEditor/SourceEditorWidget.cs: Window split now removes
	  the split that doesn't have the focus. (intelligent split)

2008-03-04  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs,
	  gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs,
	  gtk-gui/MonoDevelop.SourceEditor.SearchWidget.cs: Fixed some dialogs for
	  hig compliance.
